# gedcom2csv

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  gedcom2csv.py  pyproject.toml
.github/workflows/: run-tests.yaml
scripts/: gedcom2csv.sh
src/gedcom2csv/: main.py  transformer.py
tests/: README.md  conftest.py  test_transformer.py
tests/data/: expected.csv  test.ged
